<resources>
    <string name="app_name">CouponUnion</string>

    <string name="home">首页</string>
    <string name="recommend">推荐</string>
    <string name="special">特惠</string>
    <string name="search">搜索</string>
    <string name="profile">我的</string>

    <string name="search_bar_tips">搜您喜欢的</string>

    <string name="goods_reduce_money">省%1$.2f元</string>
    <string name="goods_reduce_after_money">券后价：%1$.2f</string>
    <string name="goods_origin_price">￥%1$.2f</string>
    <string name="goods_sales_count">%1$d已购买</string>
    <string name="ticket_title">淘口令</string>
    <string name="no_date_text">%1$s暂无推荐数据~~</string>


    <string name="recommend_nav_title">推荐宝贝</string>
    <string name="specail_nav_title">精选宝贝</string>

</resources>