<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@mipmap/navigation_bottom_home"
        android:title="@string/home" />
    <item
        android:id="@+id/recommend"
        android:icon="@mipmap/navigation_bottom_recommend"
        android:title="@string/recommend" />

    <item
        android:id="@+id/search"
        android:icon="@mipmap/navigation_bottom_search"
        android:title="@string/search" />

    <item
        android:id="@+id/red_packet_normal"
        android:icon="@mipmap/navigation_bottom_special"
        android:title="@string/special" />

    <item
        android:id="@+id/profile"
        android:icon="@mipmap/navigation_bottom_profile"
        android:title="@string/profile" />
</menu>